environments/dev/istio-gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: example-app-gateway
  namespace: dev
  annotations:
    external-dns.alpha.kubernetes.io/hostname: dev-k8s.phazon.app
spec:
  selector:
    istio: system-istio-ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "dev-k8s.phazon.app"
      tls:
        httpsRedirect: true
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: example-app-tls-cert # References a Secret in istio-system namespace
      hosts:
        - "dev-k8s.phazon.app"
